deploy/webhook-admission-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-webhook
  labels:
    app: webhook
    service: admission-webhook
webhooks:
  - name: admission-webhook.webhook.com
    clientConfig:
      # url: "https://admission-webhook.webhook.svc.cluster.local/mutate-replica-count"
      service:
        name: admission-webhook
        namespace: webhook
        path: "/mutate-replica-count"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tDQpNSUlFQURDQ0F1aWdBd0lCQWdJVVFyOUpIVkJrRitTaUl1VnhGcngyOVplUVNvSXdEUVlKS29aSWh2Y05BUUVMDQpCUUF3VlRFTE1Ba0dBMVVFQmhNQ1NVNHhEekFOQmdOVkJBZ01Ca3RsY21Gc1lURU9NQXdHQTFVRUJ3d0ZTMjlqDQphR2t4RURBT0JnTlZCQW9NQjNWemRDNWpiMjB4RXpBUkJnTlZCQU1NQ25kbFltaHZiMnRmWTJFd0lCY05NalF3DQpOVEkwTVRFek1URTVXaGdQTWpJNU9EQXpNRGt4TVRNeE1UbGFNRlV4Q3pBSkJnTlZCQVlUQWtsT01ROHdEUVlEDQpWUVFJREFaTFpYSmhiR0V4RGpBTUJnTlZCQWNNQlV0dlkyaHBNUkF3RGdZRFZRUUtEQWQxYzNRdVkyOXRNUk13DQpFUVlE [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: ["apps"]
        apiVersions: ["v1"]
        resources: ["deployments"]
    sideEffects: None
    admissionReviewVersions: ["v1", "v1beta1"]
